# dailyplant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Procfile  README.md  compose.override.yaml  compose.proxy.yaml  compose.yaml  justfile  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yaml
docker/django/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/templates/: default.conf.template  entry.conf.template  proxy.conf.template
docker/postgres/scripts/: init-user.sh
scripts/: deploy.sh  launcher.sh
src/: manage.py
src/articles/: models.py
src/articles/migrations/: 0001_initial.py
src/articles/tests/: test_article_index_page.py  test_models.py
src/core/: blocks.py  breadcrumbs.py  feeds.py  models.py  panels.py  viewsets.py  wagtail_hooks.py
src/core/migrations/: 0001_initial.py  0002_metadatasettings.py  0003_socialmediasettings_socialmedialink.py  0004_pagerelationship.py  0005_tag_pagetag.py
src/core/templatetags/: breadcrumb_tags.py  markdown_tags.py  menu_tags.py  metadata_tags.py
src/core/testapp/: apps.py  blocks.py  factories.py  models.py
src/core/testapp/migrations/: 0001_initial.py  0002_breadcrumbpage.py
src/core/tests/: test_breadcrumbs.py  test_toc.py
src/dailyplant/: storage.py  urls.py  views.py  wsgi.py
src/dailyplant/settings/: base.py  build.py  dev.py  production.py  test.py
src/dailyplant/tests/: test_error_views.py
src/facts/: blocks.py  feeds.py  models.py  viewsets.py  wagtail_hooks.py
src/facts/migrations/: 0001_initial.py  0002_facttag_taggedfact_factpage_tags.py  0003_factpagerelatedfact.py  0004_factpage_image_factpage_image_alt_and_more.py  0005_migrate_page_relationships.py  0006_migrate_page_tags.py
src/facts/tests/: test_fact_index_page.py
src/home/: factories.py  models.py
src/home/tests/: test_home_page.py
src/pattern_overrides/templatetags/: menu_tags.py  wagtailcore_tags.py
src/patterns/templates/non_patterns/: robots.txt
src/patterns/templates/patterns/: base.html  (+1 more)
src/search/: models.py  views.py
src/social/: apps.py  bluesky.py  models.py  signals.py  views.py  wagtail_hooks.py
src/social/migrations/: 0001_initial.py  0002_alter_blueskypost_page.py
src/social/tests/: test_signals.py
src/static_src/css/: style.css
src/static_src/js/: archive.js  main.js
src/users/: forms.py  views.py
src/users/migrations/: 0001_initial.py
(+74 files in other folders)
