[project]
name = "wagtail-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0,<6.1",
    "django-sesame>=3.2.3",
    "django-vite-tags",
    "gunicorn>=25.0.2",
    "honcho>=2.0.0",
    "wagtail>=7.4,<8.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.2.0",
    "django-pattern-library>=1.5.0",
    "djhtml>=3.0.11",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-django>=4.11.1",
    "ruff>=0.15.12",
    "wagtail-factories>=4.4.0",
]


[tool.uv]
exclude-newer = "P2D"

[tool.uv.sources]
django-vite-tags = { git = "https://github.com/lasse-cs/django-vite-tags.git", rev = "a69aabf0c10a45bcaa0e6f9cc2f44b4d1d7548fa" }


[tool.ruff]
extend-exclude = ["**/migrations/*.py"]


[tool.pytest]
addopts = ["--reuse-db"]
DJANGO_SETTINGS_MODULE = "dailyplant.settings.test"
pythonpath = ["src"]
python_files = ["**/tests/test_*.py"]
