[project]
name = "wagtail-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0,<6.1",
    "django-sesame>=3.2.3",
    "django-vite-tags",
    "wagtail-umami-analytics",
    "gunicorn>=25.3.0",
    "honcho>=2.0.0",
    "psycopg>=3.3.4",
    "sentry-sdk>=2.61.0",
    "wagtail>=7.4,<8.0",
    "atproto>=0.0.68",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.2.0",
    "django-pattern-library>=1.5.0",
    "djhtml>=3.0.11",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-django>=4.11.1",
    "ruff>=0.15.15",
    "wagtail-factories>=4.4.0",
]


[tool.uv]
exclude-newer = "P2D"
exclude-newer-package = { django = false, wagtail = false }

[tool.uv.sources]
django-vite-tags = { git = "https://github.com/lasse-cs/django-vite-tags.git", rev = "a69aabf0c10a45bcaa0e6f9cc2f44b4d1d7548fa" }
wagtail-umami-analytics = { git = "https://github.com/lasse-cs/wagtail-umami-analytics.git", rev = "b3f39616d9ec2a120f5ab33cbac979244e13da60" }


[tool.ruff]
extend-exclude = ["**/migrations/*.py"]


[tool.pytest]
addopts = ["--reuse-db"]
DJANGO_SETTINGS_MODULE = "dailyplant.settings.test"
pythonpath = ["src"]
python_files = ["**/tests/test_*.py"]
